--- a/hack/config.yaml
+++ b/hack/config.yaml
@@ -14,7 +14,7 @@ gfcli:
   # dao生成
   gen:
     dao:
-      - link:            "mysql:root:12345678@tcp(127.0.0.1:3306)/shop"
+      - link:            "mysql:root:12345678@tcp(127.0.0.1:3306)/shop/loc=Local"
         removePrefix:    "gf_"
         descriptionTag:  true
         noModelComment:  true
