--- a/manifest/config/config.yaml
+++ b/manifest/config/config.yaml
@@ -1,26 +1,16 @@
 server:
-  address:     ":8000"
+  address: ":8000"
   openapiPath: "/api.json"
   swaggerPath: "/swagger"
 
 # 数据库连接配置
 database:
   logger:
-    path:    "temp/logs/sql"
-    level:   "all"
-    stdout:  true
-    ctxKeys: ["RequestId"]
+    path: "logs/sql"
+    level: "all"
+    stdout: true
+    ctxKeys: [ "RequestId" ]
 
-  default:
-    link:   "mysql:root:12345678@tcp(127.0.0.1:3306)/shop?loc=Local"
-    debug:  true
-
-# Redis 配置示例
-redis:
-  # 单实例配置示例1
-  default:
-    address: 127.0.0.1:6379
-    db:      1
-    pass:        f2QteFQvC6rxjjJ6
-    idleTimeout: 600
-
+  default:  # todo  修改成自己的密码
+    link: "mysql:root:2BaDgEMGQj@tcp(127.0.0.1:3306)/shop"
+    debug: true
