--- a/hack/config.yaml
+++ b/hack/config.yaml
@@ -4,16 +4,16 @@
 gfcli:
   # 工具编译配置
   build:
-    name: "shop"
-    arch: "amd64"
-    system: "linux,darwin,windows"
-    mod: ""
-    cgo: 0
+    name:     "shop"
+    arch:     "amd64"
+    system:   "linux,darwin,windows"
+    mod:      ""
+    cgo:      0
 
   # dao生成
   gen:
-    dao:  #todo 换成你自己的密码
-      - link: "mysql:root:2BaDgEMGQj@tcp(127.0.0.1:3306)/shop"
-        removePrefix: "gf_"
-        descriptionTag: true
-        noModelComment: true
+    dao:
+      - link:            "mysql:root:12345678@tcp(127.0.0.1:3306)/shop"
+        removePrefix:    "gf_"
+        descriptionTag:  true
+        noModelComment:  true
